--- a/public/index.html
+++ b/public/index.html
@@ -13,31 +13,32 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
-
-    .chat-container {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 800px;
-      height: 600px;
+      background: linear-gradient(135deg, #111827 0%, #000000 100%);
+      height: 100vh;
+      margin: 0;
+      padding: 0;
       display: flex;
       flex-direction: column;
       overflow: hidden;
     }
 
+    .chat-container {
+      background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      backdrop-filter: blur(10px);
+    }
+
     .chat-header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: linear-gradient(135deg, #374151 0%, #1f2937 100%);
+      color: #ffffff;
       padding: 20px;
       text-align: center;
+      border-bottom: 1px solid rgba(75, 85, 99, 0.5);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     }
 
     .chat-header h1 {
@@ -54,7 +55,7 @@
       flex: 1;
       padding: 20px;
       overflow-y: auto;
-      background: #f8f9fa;
+      background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
     }
 
     .message {
@@ -73,68 +74,92 @@
       border-radius: 18px;
       word-wrap: break-word;
       white-space: pre-wrap;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
     }
 
     .message.user .message-content {
-      background: #667eea;
-      color: white;
+      background: linear-gradient(135deg, #374151 0%, #1f2937 100%);
+      color: #ffffff;
       border-bottom-right-radius: 4px;
+      border: 1px solid rgba(75, 85, 99, 0.5);
+      backdrop-filter: blur(10px);
     }
 
     .message.ai .message-content {
-      background: white;
-      color: #333;
-      border: 1px solid #e0e0e0;
+      background: rgb(193, 191, 191);
+      color: #111827;
+      border: 1px solid rgba(209, 213, 219, 0.5);
       border-bottom-left-radius: 4px;
+      backdrop-filter: blur(10px);
     }
 
     .chat-input {
       padding: 20px;
-      background: white;
-      border-top: 1px solid #e0e0e0;
+      background: linear-gradient(135deg, #374151 0%, #1f2937 100%);
+      border-top: 1px solid rgba(75, 85, 99, 0.5);
       display: flex;
-      gap: 10px;
+      gap: 12px;
+      box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.3);
     }
 
     .chat-input input {
       flex: 1;
-      padding: 12px 16px;
-      border: 1px solid #ddd;
+      padding: 14px 20px;
+      border: 1px solid rgba(75, 85, 99, 0.5);
       border-radius: 25px;
       outline: none;
       font-size: 14px;
+      background: linear-gradient(135deg, #4b5563 0%, #374151 100%);
+      color: #ffffff;
+      backdrop-filter: blur(10px);
+      transition: all 0.3s ease;
     }
 
     .chat-input input:focus {
-      border-color: #667eea;
+      border-color: rgba(156, 163, 175, 0.8);
+      background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%);
+      box-shadow: 0 0 0 4px rgba(75, 85, 99, 0.3);
+      transform: translateY(-1px);
     }
 
     .chat-input button {
-      padding: 12px 24px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      padding: 14px 28px;
+      background: linear-gradient(135deg, #374151 0%, #000000 100%);
       color: white;
       border: none;
       border-radius: 25px;
       cursor: pointer;
       font-weight: 600;
-      transition: transform 0.2s;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(75, 85, 99, 0.5);
+      backdrop-filter: blur(10px);
     }
 
     .chat-input button:hover {
-      transform: translateY(-1px);
+      background: linear-gradient(135deg, #4b5563 0%, #111827 100%);
+      transform: translateY(-2px) scale(1.05);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+    }
+
+    .chat-input button:focus {
+      outline: none;
+      box-shadow: 0 0 0 4px rgba(75, 85, 99, 0.5);
     }
 
     .chat-input button:disabled {
       opacity: 0.6;
       cursor: not-allowed;
       transform: none;
+      background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%);
     }
 
     .loading {
       display: flex;
       align-items: center;
       gap: 8px;
-      color: #666;
+      color: #d1d5db;
       font-style: italic;
     }
 
@@ -147,7 +172,7 @@
       width: 8px;
       height: 8px;
       border-radius: 50%;
-      background: #667eea;
+      background: linear-gradient(135deg, #9ca3af 0%, #6b7280 100%);
       animation: typing 1.4s infinite ease-in-out;
     }
 
@@ -161,10 +186,13 @@
 
     .session-info {
       font-size: 12px;
-      color: #666;
+      color: #d1d5db;
       text-align: center;
-      padding: 10px;
-      background: #f0f0f0;
+      padding: 12px;
+      background: linear-gradient(135deg, #4b5563 0%, #374151 100%);
+      border-bottom: 1px solid rgba(75, 85, 99, 0.5);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
