--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #111827 0%, #000000 100%);
+      background: linear-gradient(to bottom right, #111827 0%, #1f2937 50%, #000000 100%);
       height: 100vh;
       margin: 0;
       padding: 0;
@@ -23,39 +23,23 @@
     }
 
     .chat-container {
-      background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
+      background: linear-gradient(to bottom right, rgba(17, 24, 39, 0.95) 0%, rgba(31, 41, 55, 0.9) 50%, rgba(0, 0, 0, 0.98) 100%);
       width: 100%;
       height: 100vh;
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(20px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
-    .chat-header {
-      background: linear-gradient(135deg, #374151 0%, #1f2937 100%);
-      color: #ffffff;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 1px solid rgba(75, 85, 99, 0.5);
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-    }
 
-    .chat-header h1 {
-      font-size: 24px;
-      margin-bottom: 5px;
-    }
-
-    .chat-header p {
-      opacity: 0.9;
-      font-size: 14px;
-    }
 
     .chat-messages {
       flex: 1;
       padding: 20px;
       overflow-y: auto;
-      background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
+      background: transparent;
     }
 
     .message {
@@ -84,23 +68,26 @@
       border-bottom-right-radius: 4px;
       border: 1px solid rgba(75, 85, 99, 0.5);
       backdrop-filter: blur(10px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
 
     .message.ai .message-content {
-      background: rgb(193, 191, 191);
-      color: #111827;
-      border: 1px solid rgba(209, 213, 219, 0.5);
+      background: linear-gradient(135deg, #1f4f68 0%, #315776 100%);
+      color: #ffffff;
+      border: 1px solid rgba(75, 85, 99, 0.3);
       border-bottom-left-radius: 4px;
       backdrop-filter: blur(10px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
     .chat-input {
       padding: 20px;
-      background: linear-gradient(135deg, #374151 0%, #1f2937 100%);
+      background: linear-gradient(to bottom right, rgba(55, 65, 81, 0.9) 0%, rgba(31, 41, 55, 0.95) 50%, rgba(0, 0, 0, 0.98) 100%);
       border-top: 1px solid rgba(75, 85, 99, 0.5);
       display: flex;
       gap: 12px;
-      box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(20px);
     }
 
     .chat-input input {
@@ -110,7 +97,7 @@
       border-radius: 25px;
       outline: none;
       font-size: 14px;
-      background: linear-gradient(135deg, #4b5563 0%, #374151 100%);
+      background: linear-gradient(to bottom right, #374151 0%, #1f2937 50%, #111827 100%);
       color: #ffffff;
       backdrop-filter: blur(10px);
       transition: all 0.3s ease;
@@ -118,29 +105,29 @@
 
     .chat-input input:focus {
       border-color: rgba(156, 163, 175, 0.8);
-      background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%);
+      background: linear-gradient(to bottom right, #4b5563 0%, #374151 50%, #1f2937 100%);
       box-shadow: 0 0 0 4px rgba(75, 85, 99, 0.3);
       transform: translateY(-1px);
     }
 
     .chat-input button {
       padding: 14px 28px;
-      background: linear-gradient(135deg, #374151 0%, #000000 100%);
+      background: linear-gradient(to bottom right, #374151 0%, #1f2937 50%, #000000 100%);
       color: white;
       border: none;
       border-radius: 25px;
       cursor: pointer;
       font-weight: 600;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
       border: 1px solid rgba(75, 85, 99, 0.5);
       backdrop-filter: blur(10px);
     }
 
     .chat-input button:hover {
-      background: linear-gradient(135deg, #4b5563 0%, #111827 100%);
+      background: linear-gradient(to bottom right, #4b5563 0%, #374151 50%, #111827 100%);
       transform: translateY(-2px) scale(1.05);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
     }
 
     .chat-input button:focus {
@@ -152,7 +139,7 @@
       opacity: 0.6;
       cursor: not-allowed;
       transform: none;
-      background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%);
+      background: linear-gradient(to bottom right, #6b7280 0%, #4b5563 50%, #374151 100%);
     }
 
     .loading {
@@ -184,28 +171,12 @@
       40% { transform: scale(1); }
     }
 
-    .session-info {
-      font-size: 12px;
-      color: #d1d5db;
-      text-align: center;
-      padding: 12px;
-      background: linear-gradient(135deg, #4b5563 0%, #374151 100%);
-      border-bottom: 1px solid rgba(75, 85, 99, 0.5);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    }
+
   </style>
 </head>
 <body>
   <div class="chat-container">
-    <div class="chat-header">
-      <h1>🛍️ IntelliBazar AI Assistant</h1>
-      <p>Your AI-powered shopping companion • Created by PAPAN</p>
-    </div>
 
-    <div class="session-info">
-      <span id="sessionStatus">Initializing session...</span>
-    </div>
 
     <div class="chat-messages" id="chatMessages">
       <!-- Messages will be added here -->
@@ -240,14 +211,12 @@
         const data = await response.json();
 
         currentUserId = data.userId;
-        document.getElementById('sessionStatus').textContent = `Session ID: ${currentUserId.substring(0, 8)}...`;
 
         // Add welcome message
         addMessage('ai', data.welcomeMessage);
 
       } catch (error) {
         console.error('Failed to initialize session:', error);
-        document.getElementById('sessionStatus').textContent = 'Failed to initialize session';
       }
     }
 
